--- a/viz.css
+++ b/viz.css
@@ -5,7 +5,7 @@ body{
         
     height: 100vh;
     margin:0;
-    text-align: center;
+/*    text-align: center;*/
 /*    padding-left: 100px;*/
 /*    padding-right: 100px;*/
 }
@@ -15,13 +15,41 @@ body{
     padding-right: 200px;
 }
 
-.2{
+.allegation{
+/*
     align-content: center;
     align-self: center;
+*/
+    padding-top: 100px;
+    padding-left: 20px;
+    
 }
 
-.3{
-    text-align: center;
+.text3{
+/*    text-align: center;*/
     padding-left: 200px;
     padding-right: 200px;
+}
+
+.graph1{
+    float:left;
+}
+
+h1{
+    text-align: center;
+}
+
+.count{
+    align-content: center;
+    align-self: center;
+    padding-left: 200px;
+    padding-top: 80px;
+}
+
+.4{
+    margin-right:300px;
+}
+
+.end{
+    text-align: center;
 }
